--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,6 +20,7 @@
         <item name="android:background">@color/app_main_clr</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:fontFamily">@font/poppins_regular</item>
+        <item name="android:textSize">@dimen/_10sdp</item>
     </style>
 
 </resources>
